RESOLVED FIXED187207
REGRESSION (r232806): Facebook login fields have blue fill background instead of white
https://bugs.webkit.org/show_bug.cgi?id=187207
Summary REGRESSION (r232806): Facebook login fields have blue fill background instead...
Antti Koivisto
Reported 2018-06-29 16:55:21 PDT
...bacause prefers-dark-interface media query on UA sheet always evaluates to true.
Attachments
patch (2.95 KB, patch)
2018-06-29 17:04 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2018-06-29 17:03:04 PDT
Antti Koivisto
Comment 2 2018-06-29 17:04:13 PDT
WebKit Commit Bot
Comment 3 2018-06-29 20:02:30 PDT
Comment on attachment 343976 [details] patch Clearing flags on attachment: 343976 Committed r233389: <https://trac.webkit.org/changeset/233389>
WebKit Commit Bot
Comment 4 2018-06-29 20:02:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.