REGRESSION (r232806): Facebook login fields have blue fill background instead of white https://bugs.webkit.org/show_bug.cgi?id=187207 Source/WebCore:

<rdar://problem/41606349>

Reviewed by Tim Horton.

This happens because a 'prefers-dark-interface' media query on UA sheet always evaluates to true in dark mode.

Tests: fast/forms/input-background-ua-media-query.html

* css/MediaQueryEvaluator.cpp:
(WebCore::prefersDarkInterfaceEvaluate):

Make prefers-dark-interface media query match only when using system appearance.

LayoutTests:

Reviewed by Tim Horton.

* fast/forms/input-background-ua-media-query-expected.html: Added.
* fast/forms/input-background-ua-media-query.html: Added.


Canonical link: https://commits.webkit.org/202474@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233389 268f45cc-cd09-0410-ab3c-d52691b4dbfc