Source/WebCore/css/MediaQueryEvaluator.cpp
@@ -717,7 +717,7 @@ static bool prefersDarkInterfaceEvaluate(CSSValue* value, const CSSToLengthConve
 {
     bool prefersDarkInterface = false;
 
-    if (!frame.page()->defaultAppearance())
+    if (frame.page()->useSystemAppearance() && !frame.page()->defaultAppearance())
         prefersDarkInterface = true;
 
     if (!value)
